# RockPaperScissors

./: CMakeLists.txt  Computer.cpp  Computer.h  Human.cpp  Human.h  build.sh  build_and_test.sh  constants.h  main.cpp  player.cpp  player.h  rps  rps.cpp  rps.h  utility.cpp  utility.h
src/: CMakeLists.txt
src/rps/: CMakeLists.txt  computer.cpp  constants.h  game.cpp  game.h  human.cpp  main.cpp  player.cpp  rps.cpp  utility.cpp  utility.h
src/rps/include/rps/: computer.h  game.h  human.h  player.h  rps.h
tests/: CMakeLists.txt  rps_test.cpp
